<resources>
    <string name="app_name">FitTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Configure_your_profile">Configura tu perfil</string>
    <string name="What_is_your_daily_activity_level">Cual es tu nivel de actividad diario?</string>
    <string name="Choose_an_option_to_customize_your_plan">Elige una opcion para personalizar tu plan.</string>
    <string name="Sedentary">Sedentaria</string>
    <string name="Light">Ligera</string>
    <string name="Moderate">Moderada</string>
    <string name="High">Alta</string>
    <string name="Very_HIgh">Muy alta</string>
    <string name="Next">Siguiente</string>
    <string name="Physical_Aspects">Aspectos Fisicos</string>
    <string name="Sex">Sexo</string>
    <string name="Male">Masculino</string>
    <string name="Female">Femenino</string>
    <string name="How_old_are_you">¿Que edad tienes?</string>
    <string name="Age">Edad</string>
    <string name="Height">Altura (cm)</string>
    <string name="How_tall_are_you">¿Cuanto mides?</string>
    <string name="create_your_account">Crea una cuenta</string>
    <string name="start_tracking_your_workouts_and_nutrition">Empieza a seguir tu nutricion y entrenamientos</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="already_have_an_account_log_in">¿Ya tienes una cuenta?</string>
    <string name="What_is_your_goal">Cual es tu objetivo?</string>
    <string name="lose_weight_cut">Perder Peso (Definicion)</string>
    <string name="Mantein">Mantenimiento</string>
    <string name="gain_weight_bulk">Ganar Peso (Volumen)</string>
    <string name="How_much_do_you_weight">¿Cuanto pesas?</string>
    <string name="Weight">Peso (Kg)</string>
    <string name="login">Inicia Sesion</string>
    <string name="remember_where_did_you_left">Recuerda donde lo dejaste</string>
    <string name="you_dont_hava_an_account_sign_up">¿No tienes una cuenta? Registrate</string>
    <string name="login2">Iniciar Sesion</string>
    <string name="Menu_Diet">Dieta</string>
    <string name="Menu_Home">Inicio</string>
    <string name="Menu_Workout">Entrenamiento</string>
    <string name="Menu_Progress">Progreso</string>
    <string name="Menu_Others">Otros</string>
    <string name="fittrack">Fittrack</string>
    <string name="Calories">Calorías</string>
    <string name="Proteins">Proteínas</string>
    <string name="Fats">Grasas</string>
    <string name="Carbohydrates">Carbohidratos</string>
    <string name="Workout">Entrenamiento</string>
    <string name="Last_Workout">Ultimo Entrenamiento</string>
    <string name="Progress">Progreso</string>
    <string name="Confirm_your_Password">Confirma tu contraseña</string>
    <string name="a_adir_alimento">Añadir alimento</string>
    <string name="Text_RecomendedTargets">En base a tus objetivos, datos físicos y estilo de vida estos son tus valores recomendados. Puedes mantenerlos o cambiarlos</string>
    <string name="Your_plan">Tu plan recomendado</string>
    <string name="finish">Terminar</string>
    <string name="target_calories">Calorias Objetivo</string>
    <string name="recomended_calories">Calorias diarias recomendadas</string>
    <string name="recommended_target_weight">Peso objetivo recomendado</string>
    <string name="calories_per_day">Calorias diarias</string>
    <string name="target_weight_en_kg">Peso objetivo en kg</string>
    <string name="peso_objetivo">Peso objetivo</string>
    <string name="you_have_left">Te quedan</string>
</resources>