<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/ft_background"
    tools:context=".ui.Auth.ActivityLevelFragment">

    <LinearLayout
        android:id="@+id/stepProgressContainer"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/step1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@color/ft_primary"/>

        <View
            android:id="@+id/step2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@color/ft_primary"/>

        <View
            android:id="@+id/step3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@color/ft_border"/>

        <View
            android:id="@+id/step4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ft_border"/>

    </LinearLayout>




    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/What_is_your_daily_activity_level"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/ft_text_primary"
        app:layout_constraintTop_toBottomOf="@id/stepProgressContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Choose_an_option_to_customize_your_plan"
        android:textSize="14sp"
        android:textColor="@color/ft_text_secondary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Grupo de botones tipo "cuadraditos" -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/activityToggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSedentary"
            style="@style/GoalOptionButton"
            android:fontFamily="sans-serif"
            android:text="@string/Sedentary"
            app:strokeColor="@color/ft_primary"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLight"
            style="@style/GoalOptionButton"
            android:fontFamily="sans-serif"
            android:text="@string/Light"
            app:strokeColor="@color/ft_primary"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnModerate"
            style="@style/GoalOptionButton"
            android:text="@string/Moderate"
            app:strokeColor="@color/ft_primary"
            android:fontFamily="sans-serif"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHigh"
            style="@style/GoalOptionButton"
            android:fontFamily="sans-serif"
            android:text="@string/High"
            app:strokeColor="@color/ft_primary"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVeyHigh"
            style="@style/GoalOptionButton"
            android:text="@string/Very_HIgh"
            app:strokeColor="@color/ft_primary"
            android:fontFamily="sans-serif"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:backgroundTint="@color/ft_primary"
        android:layout_marginTop="24dp"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@id/activityToggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>