<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ft_background"
    android:padding="24dp"

    tools:context=".ui.Auth.AuthFragment">

    <!-- Progress 3 steps -->
    <View
        android:id="@+id/stepProgressContainer"
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- TITLE -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/ft_text_primary"
        app:layout_constraintTop_toBottomOf="@id/stepProgressContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- SUBTITLE -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remember_where_did_you_left"
        android:textSize="14sp"
        android:textColor="@color/ft_text_secondary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <!-- EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/hints"
        app:boxStrokeColor="@color/ft_border"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/ft_text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/hints"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:boxStrokeColor="@color/ft_border"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/ft_text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/login2"
        android:textColor="@color/white"
        android:backgroundTint="@color/ft_primary"
        app:cornerRadius="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LOGIN LINK -->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_dont_hava_an_account_sign_up"
        android:textColor="@color/ft_primary"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:indeterminateTint="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>